Fixing overlapping of the menu on loader

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -28,7 +28,7 @@ p {
     right:0;
     bottom:0;
     background-color:#fff; /* change if the mask should have another color then white */
-    z-index:99; /* makes sure it stays on top */
+    z-index:9999; /* makes sure it stays on top */
 }
 
 #status {
